--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
     <title>Lacklusta's Page</title>
   </head>
   <body>
+    <center>
+    <h1>Welcome to Lacklusta's Website</h1>
+
+    <marquee><h3>NEW ADDITIONS!!!</h3></marquee>
+    </center>
   </body>
 </html>
