--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <center>
     <h1>Welcome to Lacklusta's Website</h1>
 
-    <marquee scrollamount="20"><h3>NEW ADDITIONS!!!</h3></marquee>
+    <marquee scrollamount="20"><h3>NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! NEW ADDITIONS!!! </h3></marquee>
     </center>
   </body>
 </html>
